--- a/a3AUSTIN/styles/index.css
+++ b/a3AUSTIN/styles/index.css
@@ -1,3 +1,8 @@
-.courseButton, .uniButton{
-    display:inline-block;
+.container{
+    width:75%;
+    text-align:center;
+}
+
+.innerContainer{
+    display: inline-block;
 }
